[tool.poetry]
name = "lmd-viz"
version = "0.1.0"
description = ""
authors = ["matthieuvion <_deletethis_vionmatthieu@gmail.com>"]
readme = "README.md"
packages = [{include = "lmd_viz"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
